<resources>
    <string name="txt_home_appointment">立即预约</string>
    <string name="txt_home_choice_foreman">自选工长</string>
    <string name="app_name">惠装</string>
    <string name="menu_settings">Settings</string>
    <string name="txt_bottom_tab_home">首页</string>
    <string name="txt_bottom_tab_decoration">找装修</string>
    <string name="txt_bottom_tab_diary">日记</string>
    <string name="txt_bottom_tab_design_sketch">效果图</string>
    <string name="txt_bottom_tab_me">我</string>
    <string name="txt_visit_count_format">%1$s人来过</string>
    <string name="submit">提交</string>
    <string name="ensure">确定</string>
    <string name="ensure_ok">确认</string>
    <string name="give_up">放弃</string>
    <string name="back">返回</string>
    <string name="next_step">下一步</string>
    <string name="txt_restrict_clicks">亲，请明天再来吧</string>
    <string name="txt_quit_app">退出应用</string>
    <string name="txt_are_you_sure_to_quit">您确定要退出吗？</string>
    <string name="txt_quit">退出</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_focus_success">关注成功</string>
    <string name="txt_select_friends">选择好友</string>
    <string name="txt_apply_success">申请成功</string>
    <string name="txt_unit_of_area">㎡</string>
    <string name="txt_common_search_hint">查找：例如“龙发装饰”</string>
    <string name="txt_relative_bill_detail">相关清单</string>
    <string name="txt_format_number_people_see">等%1$d人看过</string>
    <string name="txt_format_number_people_see_less_than_5">%1$d人看过</string>
    <string name="txt_diary_upload_limit">亲，你最多只能选择%1$d张图</string>
    <string name="txt_version_info">%1$s</string>
    <string name="txt_company_info">惠装网   © huizhuang.com</string>
    <string name="txt_filter_key_name">筛选</string>
    <string name="image_select_from_camera">拍照</string>
    <string name="image_select_from_album">选择本地图片</string>
    <string name="image_select_crop_img">正在剪切图片&#8230;</string>
    <string name="title_user_login">账号登录</string>
     <string name="title_user_login_fast">快速登录</string>
    <string name="search">搜索</string>
    <string name="back_home">返回首页</string>
    <string name="sure_exit">确定退出</string>
    <string name="next">验证</string>
    <string name="skip">跳过</string>
    <string name="sure_logout">确定注销</string>
    <string name="reset_load">重新加载</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="verifyandlogin">验证并登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="timeout">超时</string>
    <string name="save">保存</string>
    <string name="guess_like">猜你喜欢</string>
    <string name="look_store">商家查询</string>
    <string name="recommend_friends">推荐好友</string>
    <string name="title_guess_like">猜你喜欢</string>
    <string name="select_least_one">至少选择一种您感兴趣的风格类型</string>
    <string name="ok_laike_this">OK!  我喜欢这些风格</string>
    <string name="title_select_friends">推荐好友</string>
    <string name="basis_of_location">我们根据您的地理位置和爱好作以下推荐</string>
    <string name="open_my_artifact">开启我的惠装</string>
    <string name="title_check_code">账号注册</string>
    <string name="sented">已发送</string>
    <string name="code_message">验证码短信</string>
    <string name="this_phone">到这个号码</string>
    <string name="not_get">收不到验证码？</string>
    <string name="title_check_phone">手机号验证</string>
    <string name="sent_verify">发送验证码</string>
    <string name="phone_email_username">手机号/邮箱/用户名</string>
    <string name="txt_test_phone">验证手机</string>
    <string name="txt_send_code_tip">点击“下一步”，即表同意</string>
    <string name="txt_top_tip">为了工长能及时联系您，请验证手机</string>
    <string name="title_user_data_editor">个人资料</string>
    <string name="txt_nickname">我的昵称</string>
    <string name="txt_bename">取个洋气的名字吧~</string>
    <string name="txt_sex">我的性别</string>
    <string name="txt_host_city">所在城市</string>
    <string name="txt_cd">成都</string>
    <string name="txt_phone">手机号码</string>
    <string name="txt_only_visit">仅作为活动报名回访</string>
    <string name="txt_construction_free_visit">免费申请参观</string>
	<string name="txt_construction_progress">施工进度</string>
	<string name="txt_construction_scheme">施工方案</string>
	<string name="txt_construction_site">施工现场</string>
    <string name="input_code">输入验证码</string>
    <string name="input_pic_code">请输入右图中的验证码</string>
    <string name="title_city_list">城市列表</string>
    <string name="txt_contract_average">合同均价</string>
    <string name="txt_appointment_immediately">马上预约</string>
    <string name="txt_tv_order_statoc">位业主预约</string>
    <string name="txt_tag_zjb">家装宝签约</string>
    <string name="txt_tag_coupon">优惠券</string>
    <string name="txt_comment_num">条口碑</string>
    <string name="txt_diary_num">篇日记提及</string>
    <string name="txt_company_search_empty">没有找到合适的装修公司喔，请更改筛选条件</string>
    <string name="txt_company_appointment">位业主预约</string>
    <string name="txt_company_distance">距离</string>
    <string name="txt_company_design_scheme">套设计方案</string>
    <string name="txt_company_complete">成交</string>
    <string name="txt_title_company_map">公司地图</string>
    <string name="txt_title_select_company_detail">店铺详情</string>
    <string name="txt_company_appointment_num">业主预约</string>
    <string name="txt_company_address">店铺地址</string>
    <string name="txt_recommended_levels">推荐指数</string>
    <string name="txt_service_attitude">服务态度</string>
    <string name="txt_professional_ability">专业能力</string>
    <string name="txt_issues_coordinate">问题协调</string>
    <string name="txt_job_schedule">工程进度</string>
    <string name="txt_shop_comments">店铺评论</string>
    <string name="txt_genus_diary">所属日记</string>
    <string name="txt_supervision_diary">监理日记</string>
    <string name="txt_renovation_diary">装修日记</string>
    <string name="txt_company_introduction">公司简介</string>
    <string name="txt_company_aera">展厅面积：</string>
    <string name="txt_company_auth">认证</string>
    <string name="txt_read_all">阅读全部</string>
    <string name="txt_put_away">收起</string>
    <string name="txt_company_average_price">人均价</string>
    <string name="txt_company_undertake_price">承接价</string>
    <string name="txt_company_setup_time">成立时间</string>
    <string name="txt_company_support_services">支持服务</string>
    <string name="txt_company_services_free_design">免费设计</string>
    <string name="txt_company_services_third_testing">第三方质量检测</string>
    <string name="txt_company_services_ecured_transactions">担保交易</string>
    <string name="txt_company_services_zero">预算0增项</string>
    <string name="txt_company_design_scheme_appointment">我要预约</string>
    <string name="txt_title_favorite_company">收藏公司</string>
    <string name="title_discusslist">口碑评价</string>
    <string name="title_company_discuss">我要评论</string>
    <string name="title_attention">我关注</string>
    <string name="title_be_attention">关注我</string>
    <string name="txt_quality_report_last_question">上阶段不合格整改</string>
    <string name="txt_quality_report_last_original_question">检查原有质量问题</string>
    <string name="title_comment">新评论</string>
    <string name="txt_comment_totality">总体评价</string>
    <string name="txt_write_somthing">写满15字，即有机会赢免单及iPhone6</string>
    <string name="txt_share_to">分享到</string>
    <string name="txt_publish">发布</string>
    <string name="title_setting">设置</string>
    <string name="txt_bind_setting">绑定设置</string>
    <string name="txt_push_setting">推送设置</string>
    <string name="txt_no_load_image">3G/2G环境下不加载图片</string>
    <string name="txt_clear_cache">清除缓存</string>
    <string name="txt_feedback">意见反馈</string>
    <string name="txt_give_praise">给个好评</string>
    <string name="txt_version_information">版本信息</string>
    <string name="txt_Logout">退出登录</string>
    <string name="txt_qq_login">QQ登录</string>
    <string name="txt_weibo_login">微博登录</string>
    <string name="txt_phone_login">手机登录</string>
    <string name="txt_register_now">立即注册</string>
    <string name="txt_look_around">随便逛逛</string>
    <string name="txt_bind_qq">绑定腾讯QQ</string>
    <string name="txt_bind_sina">绑定新浪微博</string>
    <string name="txt_bind_douban">绑定豆瓣</string>
    <string name="txt_bind_renren">绑定人人</string>
    <string name="title_setting_passwrod">密码修改</string>
    <string name="txt_original_pw">请输入原密码</string>
    <string name="txt_new_pw">请输入新密码</string>
    <string name="txt_again_new_pw">请重复输入一次新密码</string>
    <string name="txt_push_content">推送内容</string>
    <string name="txt_system_message">系统消息</string>
    <string name="txt_push_time">推送时间</string>
    <string name="txt_receive_time">推送接收时间</string>
    <string name="txt_time">6:00-0:00</string>
    <string name="txt_date">每日</string>
    <string name="txt_about_edition">版本：</string>
    <string name="txt_aboud_version">正式版</string>
    <string name="title_about">关于惠装</string>
    <string name="title_search">筛选条件</string>
    <string name="txt_search_completed">完成</string>
    <string name="txt_search_hint">查找：例如“地中海”</string>
    <string name="txt_decoration_types">装修类型</string>
    <string name="txt_renovation_ways">装修方式</string>
    <string name="txt_storeorder_options">装修预算</string>
    <string name="txt_cost_ranges">智能排序</string>
    <string name="title_company_order">我要预约</string>
    <string name="txt_company_order_name">姓名</string>
    <string name="txt_company_order_visit">用于客服电话回访</string>
    <string name="txt_contact">联系人</string>
    <string name="txt_company_order_phone">手机</string>
    <string name="txt_company_order_visit_time">回访时间</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_refreshing">正在刷新\u2026</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开后加载</string>
    <string name="xlistview_footer_hint_loading">正在加载\u2026</string>
    <string name="xlistview_footer_newest_time">1分钟前</string>
    <string name="picture_from_camera">拍照</string>
    <string name="picture_from_album">选择本地图片</string>
    <string name="crop_img_tips">正在剪切图片&#8230;</string>
    <string name="more_menu_setting">密码修改</string>
    <string name="more_menu_feedback">意见反馈</string>
    <string name="more_menu_clear">清除缓存</string>
    <string name="more_menu_update">检测更新</string>
    <string name="more_menu_about">关于我们</string>
    <string name="more_menu_exit">退出应用</string>
    <string name="about_company">公司信息</string>
    <string name="technology_support">技术支持：lgmshare@gmail.com</string>
    <string name="cropright">版权信息Cropright:lgmshare</string>
    <string name="about_service_phone">客服热线：999999</string>
    <string name="update_start_download">开始下载</string>
    <string name="update_stop_download">停止下载</string>
    <string name="pay_info">支付信息</string>
    <string name="order_number">订单号：</string>
    <string name="pay_money">支付金额：</string>
    <string name="pay_method">选择支付方式</string>
    <string name="pay_zhifubao">支付宝支付</string>
    <string name="pay_recommend_zhifubao">推荐支付宝用户使用</string>
    <string name="pay_weixin">微信支付</string>
    <string name="pay_recommend_weixin">推荐已安装微信的用户使用</string>
    <string name="pay_online">在线支付</string>
    <string name="pay_recommend_online">推荐选择在线支付，快捷、安全</string>
    <string name="pay_pos">pos机上门收款</string>
    <string name="mobile_phone">手机号</string>
    <string name="txt_check_code">验证码</string>
    <string name="input_check_code">请输入手机验证码</string>
    <string name="txt_house_type_graph">房型图</string>
    <string name="txt_house_design_graph">设计图</string>
    <string name="txt_house_effect_graph">效果图</string>
    <string name="txt_house_type">户型</string>
    <string name="txt_house_square">面积</string>
    <string name="txt_house_style">风格</string>
    <string name="txt_house_decorate_time">装修时间</string>
    <string name="txt_house_decorate_company">装修公司</string>
    <string name="txt_house_designer">设计师</string>
    <string name="txt_house_decorate_budget">装修预算</string>
</resources>