<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <com.huizhuang.zxsq.widget.actionbar.CommonActionBar
        android:id="@+id/common_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.huizhuang.zxsq.widget.actionbar.CommonActionBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_push_content"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/setting_text_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/txt_push_content"
                android:textColor="@color/gray_4c"
                android:textSize="16sp" />

            <View
                android:id="@+id/line01"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_push_content"
                android:layout_marginLeft="12dp"
                android:background="#d9d9d9" />

            <TextView
                android:id="@+id/tv_push_message"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_below="@id/line01"
                android:background="@drawable/setting_text_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/txt_system_message"
                android:textColor="@color/gray_80"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/line01"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_green_off" />

            <View
                android:id="@+id/line02"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_push_message"
                android:background="#d9d9d9" />

            <TextView
                android:id="@+id/tv_push_time"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_below="@id/line02"
                android:background="@drawable/setting_text_selector"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/txt_push_time"
                android:textColor="@color/gray_4c"
                android:textSize="16sp" />

            <View
                android:id="@+id/line03"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_push_time"
                android:layout_marginLeft="12dp"
                android:background="#d9d9d9" />

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_below="@id/line03" >

                <TextView
                    android:id="@+id/tv_push_time01"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:background="@drawable/setting_text_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/txt_receive_time"
                    android:textColor="@color/gray_80"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="48dp"
                    android:layout_toRightOf="@id/tv_push_time01"
                    android:text="@string/txt_date"
                    android:textColor="@color/gray_80"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/tv_date"
                    android:text="@string/txt_time"
                    android:textColor="@color/gray_80"
                    android:textSize="16sp" />
                
                <ImageView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_right_gray_big"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"/>
            </RelativeLayout>
            
            <View
                android:id="@+id/line04"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/rl"
                android:background="#d9d9d9" />            
        </RelativeLayout>
    </ScrollView>

</LinearLayout>