<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <com.huizhuang.zxsq.widget.actionbar.CommonActionBar
        android:id="@+id/common_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_header_height"></com.huizhuang.zxsq.widget.actionbar.CommonActionBar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/line" />
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@color/white"
			    android:orientation="vertical">	
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/mobile_phone"
                    android:textColor="@color/gray_66"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/txt_check_code"
                    android:textColor="@color/gray_66"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_xcode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/input_check_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColorHint="@color/color_cccccc"
                    android:textSize="16sp" android:layout_marginLeft="8dp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/color_cccccc" />

                <Button
                    android:id="@+id/btn_code"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:padding="8dp"
                    android:text="@string/sent_verify"
                    android:textColor="@color/color_ff6c38"
                    android:textSize="@dimen/txt_size_16" />
            </LinearLayout>
	</LinearLayout>	
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/line" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/ButtonLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_orange"
                android:text="验证手机号并登录" />
            <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/txt_size_14"
			    android:layout_marginTop="15dp"
			    android:layout_marginBottom="15dp"
			    android:textColor="@color/color_ff6c38"
			    android:text="我们承诺：您的隐私将被严格保密，请您放心使用"/>            
        </LinearLayout>
    </ScrollView>

</LinearLayout>