<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5" >

    <com.huizhuang.zxsq.widget.actionbar.CommonActionBar
        android:id="@+id/common_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >
    </com.huizhuang.zxsq.widget.actionbar.CommonActionBar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_below="@id/common_action_bar">



            <View
                android:id="@+id/line01"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="#d9d9d9" />
            <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"                
            android:orientation="vertical"    
            android:background="@color/white" >

             <EditText
                android:id="@+id/et_original_pw"
                android:layout_width="fill_parent"
                android:layout_height="58dp"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:layout_marginLeft="12dp"
                android:inputType="textPassword"
                android:maxLength="12"
                android:singleLine="true"
                android:background="@null"
                android:hint="@string/txt_original_pw"
                android:textColorHint="#cccccc"
                android:textSize="16sp" />

            <View
                android:id="@+id/line02"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="#d9d9d9" />

             <EditText
                android:id="@+id/et_new_pw"
                android:layout_width="fill_parent"
                android:layout_height="58dp"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:layout_marginLeft="12dp"
                android:inputType="textPassword"
                android:maxLength="12"
                android:singleLine="true"
                android:background="@null"
                android:hint="@string/txt_new_pw"
                android:textColorHint="#cccccc"
                android:textSize="16sp" />

            
            <View
                android:id="@+id/line03"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="#d9d9d9" />
             <EditText
                android:id="@+id/et_again_new_pw"
                android:layout_width="fill_parent"
                android:layout_height="58dp"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:inputType="textPassword"
                android:maxLength="12"
                android:layout_marginLeft="12dp"
                android:singleLine="true"
                android:background="@null"
                android:hint="@string/txt_again_new_pw"
                android:textColorHint="#cccccc"
                android:textSize="16sp" />
             </LinearLayout>
            <View
                android:id="@+id/line6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d9d9d9" />

		            
		<LinearLayout 
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		    android:orientation="vertical">
	        <Button
	            android:id="@+id/btn_ensure_off"
                style="@style/ButtonLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/guesslike_edge"
                android:text="@string/ensure"
                 android:textColor="#cccccc"
                />            
            <Button
                android:id="@+id/btn_ensure_on"
                style="@style/ButtonLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/orange_bottom_selector"
                android:text="@string/ensure" 
                
                android:visibility="gone"/>
          </LinearLayout>
        </LinearLayout>

</RelativeLayout>